--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <form action="/api/server" method="POST" class="bg-white p-6 rounded-xl shadow-md space-y-4">
     <input type="email" name="email" required placeholder="Your email" class="w-full px-4 py-2 border rounded-lg" />
 
-    <!-- <input type="hidden" name="tag" value="website-lead" /> -->
+    <input type="hidden" name="tag" value="test tag" />
 
     <button class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700">
         Subscribe
