--- a/landing.html
+++ b/landing.html
@@ -51,24 +51,28 @@
                     Get Your Free Tax Review
                 </h2>
 
-                <form class="space-y-4">
-                    <input type="text" placeholder="Full Name"
+                <form action="/api/server" method="POST" class="space-y-4">
+                    <input type="hidden" name="tag" value="test tag" />
+                    <input type="text" placeholder="First Name" name="fname"
                         class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-accent"
                         required />
-                    <input type="email" placeholder="Email Address"
+                    <input type="text" placeholder="Last Name" name="lname"
                         class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-accent"
                         required />
-                    <input type="tel" placeholder="Phone Number"
+                    <input type="email" placeholder="Email Address" name="email"
+                        class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-accent"
+                        required />
+                    <input type="tel" placeholder="Phone Number" name="phone"
                         class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-accent"
                         required />
 
-                    <select
-                        class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-accent">
-                        <option>Employment Type</option>
-                        <option>Employed</option>
-                        <option>Self-Employed</option>
-                        <option>Small Business Owner</option>
-                        <option>Freelancer</option>
+                    <select class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-accent"
+                        name="etype" required>
+                        <option value="" selected disabled>Employment Type</option>
+                        <option value="Employed">Employed</option>
+                        <option value="Self-Employed">Self-Employed</option>
+                        <option value="Small Business Owner">Small Business Owner</option>
+                        <option value="Freelancer">Freelancer</option>
                     </select>
 
                     <button type="submit"
