--- a/thank-you.html
+++ b/thank-you.html
@@ -94,7 +94,7 @@
                 <p class="text-lg mb-4">
                     Want to speed things up?
                 </p>
-                <a href="#"
+                <a href="https://calendly.com/lashandasmarttaxiq/30min"
                     class="inline-block bg-accent text-primary font-semibold px-8 py-3 rounded-lg hover:opacity-90 transition">
                     Book My Consultation Now
                 </a>
